# rcfg

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
example/: CMakeLists.txt  custom_param.cpp  flat_struct.cpp  map_struct.cpp  vector_struct.cpp
src/rcfg/: check.h  rcfg.h  sink.h  utils.h
test/: CMakeLists.txt  ClassParserTest.cpp  MapParserTest.cpp  ParamParserTest.cpp  SetParserTest.cpp  TestEventSink.h  VectorParserTest.cpp
